--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^3.2.0",
+    "ngx-pagination": "^3.2.1",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
