--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,10 +26,11 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [        
+            "styles": [              
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.less",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
