--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^3.2.0",
+    "ngx-file-drop": "^6.0.1",
     "ngx-pagination": "^3.2.1",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
