--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,7 +29,7 @@
             "styles": [              
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.less",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
               
             ],
             "scripts": [
