--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "angular-inline-editors": "^2.0.4",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
