--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "ngx-alerts": "^3.4.5",
     "ngx-bootstrap": "^3.2.0",
     "ngx-file-drop": "^6.0.1",
     "ngx-pagination": "^3.2.1",
