--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/NCEduBD
+spring.datasource.url=jdbc:mysql://localhost:3306/NCEduBD?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
