--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8082
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+
